# reflector

./: .gitignore  .latexmkrc  .pre-commit-config.yaml  .release-please-config.json  .zenodo.json  00-README.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS.md  README.md  README_HF.md  REUSE.toml  ROADMAP.md  SECURITY.md  TODO.md  Taskfile.yml  codemeta.json  publication.json  pyproject.toml  release-manifest.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
audits/: README.md  arxiv-validation.md  audit-2026-05-28T00-32-00Z.md  audit-2026-05-28T00-33-56Z.md  build-reproducibility.md  chktex-audit.md  final-publication-polish.md  publication-experience-audit.md  publication-readiness-summary.md  publication-readiness.md  publication-ux-audit.md  reference-implementation-readiness.md  repository-reflection-audit.md  template-configuration-model.md  template-extraction-plan.md  template-extraction-readiness.md  template-extraction-result.md  template-independent-copy-validation.md  template-portability-inventory.md  v0.1.3-checkpoint-readiness.md  version-bump-workflow-validation.md  zenodo-readiness.md
docs/: _config.yml  ai-onboarding.md  architecture-overview.md  getting-started.md  huggingface.md  index.html  licensing.md  publication-architecture.md  publication-infrastructure.md  publication-quality.md  publication-system-reference.md  publication-workflow-map.md  release-process.md  site.webmanifest  toolchain.md  workflows.md
magazine/: README.md  consistency-mapping.yaml
metadata/: authors.yaml  (+3 more)
(+220 files in other folders)
