[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reflector"
version = "0.0.1"
description = "Reflector infrastructure and publication scaffolding."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Alan Szmyt" }
]
keywords = ["reflector", "ai", "synchronization", "governance"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://egohygiene.github.io/reflector/"
Repository = "https://github.com/egohygiene/reflector"
Documentation = "https://egohygiene.github.io/reflector/"

[tool.setuptools.packages.find]
include = ["reflector*"]
